# aumos-finserv-overlay

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
src/aumos_finserv_overlay/: __init__.py  main.py  settings.py
src/aumos_finserv_overlay/adapters/: __init__.py  aml_checker.py  basel_calculator.py  credit_risk_synth.py  dora_compliance.py  finserv_sdk.py  fips_validator.py  fraud_pattern_generator.py  fx_simulator.py  iso20022_adapter.py  kafka.py  market_data_adapter.py  model_risk_manager.py  open_banking_adapter.py  pci_dss_checker.py  regulatory_feed.py  report_generator.py  repositories.py  soc2_evidence.py  sox_compliance.py  swift_csp_checker.py  transaction_generator.py  transaction_monitor.py
src/aumos_finserv_overlay/api/: __init__.py  router.py  schemas.py
src/aumos_finserv_overlay/core/: __init__.py  interfaces.py  models.py  services.py
tests/: __init__.py
