[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-finserv-overlay"
version = "0.1.0"
description = "Financial services vertical overlay — SOX, SEC AI guidance, SR 11-7 model risk, PCI DSS, DORA compliance, synthetic transactions, regulatory reporting"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "AumOS Enterprise" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aumos-common>=0.1.0",
    "aumos-proto>=0.1.0",
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "confluent-kafka>=2.3.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "jinja2>=3.1.0",
    "reportlab>=4.1.0",
    "cryptography>=42.0.0",
    "faker>=24.0.0",
    "lxml>=5.1.0",
    "scipy>=1.12.0",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "testcontainers[postgres,kafka,redis]>=3.7.0",
    "factory-boy>=3.3.0",
    "types-boto3>=1.34.0",
    "types-redis>=4.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aumos_finserv_overlay"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RUF"]
ignore = ["ANN101", "ANN102", "COM812"]

[tool.ruff.lint.isort]
known-first-party = ["aumos_finserv_overlay"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=aumos_finserv_overlay --cov-report=term-missing --cov-fail-under=80"
